# flyradar

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260328_000001_initial.py  20260329_000002_price_history_retention.py
app/: __init__.py  main_api.py  main_worker.py
app/api/routers/: admin.py  health.py
app/bot/: states.py
app/bot/handlers/: subscriptions.py
app/bot/keyboards/: __init__.py  subscriptions.py
app/clients/: travelpayouts_rest.py
app/core/: config.py  container.py  db.py  logging.py
app/domain/: enums.py  models.py  schemas.py
app/repositories/: cache.py  checks.py  notifications.py  offers.py  subscriptions.py  users.py
app/scheduler/: jobs.py
app/services/: alerts.py  charts.py  dedupe.py  notifications.py  price_history.py  subscriptions.py
app/workers/: __init__.py
docs/: PROJECT_CONTEXT.md
tests/: conftest.py  test_alert_rules.py  test_bot_input_helpers.py  test_dedupe.py  test_notification_formatting.py  test_subscription_schema.py  test_travelpayouts_normalizers.py
